--- a/app/config/sonata_admin.config.yml
+++ b/app/config/sonata_admin.config.yml
@@ -1,3 +1,6 @@
+###Sonata admin config https://sonata-project.org/bundles/admin/2-3/doc/reference/configuration.html
+sonata_admin:
+    title:                Lienketucchau Admin
 sonata_user:
     security_acl: true
     manager_type: orm # can be orm or mongodb
