--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "friendsofsymfony/rest-bundle": "^1.7",
         "sonata-project/easy-extends-bundle": "^2.1",
         "sonata-project/media-bundle": "2.3.3",
-        "friendsofsymfony/user-bundle": "~1.3"
+        "friendsofsymfony/user-bundle": "~1.3",
+        "sensio/generator-bundle": "~2.3"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "~2.7"
