[dev] setup category admin

--- a/app/config/sonata_admin.config.yml
+++ b/app/config/sonata_admin.config.yml
@@ -1,6 +1,9 @@
 ###Sonata admin config https://sonata-project.org/bundles/admin/2-3/doc/reference/configuration.html
 sonata_admin:
     title:                Lienketucchau Admin
+    templates:
+            layout: TainbCategoryBundle::standard_layout.html.twig
+
 sonata_user:
     security_acl: true
     manager_type: orm # can be orm or mongodb
