--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+tainb_blog:
+    resource: "@TainbBlogBundle/Resources/config/routing.yml"
+    prefix:   /
+
 tainb_category:
     resource: "@TainbCategoryBundle/Resources/config/routing.yml"
     prefix:   /
