--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "sonata-project/easy-extends-bundle": "^2.1",
         "sonata-project/media-bundle": "2.3.3",
         "friendsofsymfony/user-bundle": "~1.3",
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "sonata-project/formatter-bundle": "2.3.1"
+
     },
     "require-dev": {
         "symfony/phpunit-bridge": "~2.7"
