--- a/composer.json
+++ b/composer.json
@@ -7,34 +7,25 @@
         "psr-4": { "": "src/" },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
+    "autoload-dev": {
+        "psr-4": { "Tests\\": "tests/" }
+    },
     "require": {
-        "php": ">=5.3.9",
-        "symfony/symfony": "2.8.*",
-        "doctrine/orm": "^2.4.8",
-        "doctrine/doctrine-bundle": "~1.4",
+        "php": ">=5.5.9",
+        "symfony/symfony": "3.1.*",
+        "doctrine/orm": "^2.5",
+        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-cache-bundle": "^1.2",
         "symfony/swiftmailer-bundle": "^2.3",
-        "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~4.0",
+        "symfony/monolog-bundle": "^2.8",
+        "symfony/polyfill-apcu": "^1.0",
+        "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0",
-        "symfony/assetic-bundle": "^2.8",
-        "friendsofsymfony/oauth-server-bundle": "^1.5",
-        "jms/serializer-bundle": "^1.1",
-        "nelmio/api-doc-bundle": "^2.13",
-        "facebook/php-sdk-v4": "^5.2",
-        "sonata-project/admin-bundle": "2.3.*",
-        "sonata-project/doctrine-orm-admin-bundle": "^2.3",
-        "sonata-project/user-bundle": "2.2.4",
-        "friendsofsymfony/rest-bundle": "^1.7",
-        "sonata-project/easy-extends-bundle": "^2.1",
-        "sonata-project/media-bundle": "2.3.3",
-        "friendsofsymfony/user-bundle": "~1.3",
-        "sensio/generator-bundle": "~2.3",
-        "sonata-project/formatter-bundle": "2.3.1"
-
+        "incenteev/composer-parameter-handler": "^2.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "~2.7"
+        "sensio/generator-bundle": "^3.0",
+        "symfony/phpunit-bridge": "^3.0"
     },
     "scripts": {
         "post-install-cmd": [
@@ -55,20 +46,22 @@
         ]
     },
     "config": {
-        "bin-dir": "bin",
         "platform": {
-            "php": "5.5.27"
+            "php": "5.5.9"
         }
     },
     "extra": {
         "symfony-app-dir": "app",
+        "symfony-bin-dir": "bin",
+        "symfony-var-dir": "var",
         "symfony-web-dir": "web",
+        "symfony-tests-dir": "tests",
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         },
         "branch-alias": {
-            "dev-master": "2.8-dev"
+            "dev-master": "3.1-dev"
         }
     }
 }
