--- a/composer.json
+++ b/composer.json
@@ -7,25 +7,33 @@
         "psr-4": { "": "src/" },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
-    "autoload-dev": {
-        "psr-4": { "Tests\\": "tests/" }
-    },
     "require": {
-        "php": ">=5.5.9",
-        "symfony/symfony": "3.1.*",
-        "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/doctrine-cache-bundle": "^1.2",
-        "symfony/swiftmailer-bundle": "^2.3",
-        "symfony/monolog-bundle": "^2.8",
-        "symfony/polyfill-apcu": "^1.0",
-        "sensio/distribution-bundle": "^5.0",
+        "php": ">=5.3.9",
+        "symfony/symfony": "2.8.*",
+        "doctrine/orm": "^2.4.8",
+        "doctrine/doctrine-bundle": "~1.4",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/monolog-bundle": "~2.4",
+        "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "sonata-project/admin-bundle": "2.3.10",
+        "sonata-project/intl-bundle": "2.2.4",
+        "sonata-project/doctrine-orm-admin-bundle": "2.3.3",
+        "sonata-project/user-bundle": "2.2.4",
+        "sonata-project/formatter-bundle": "2.3.3",
+        "friendsofsymfony/rest-bundle": "1.7.7",
+        "jms/serializer-bundle": "1.1.0",
+        "nelmio/cors-bundle": "^1.4",
+        "nelmio/api-doc-bundle": "2.12.0",
+        "doctrine/data-fixtures": "1.1.1",
+        "friendsofsymfony/oauth-server-bundle": "1.5.2",
+        "knplabs/knp-snappy-bundle": "1.4",
+        "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "sensio/generator-bundle": "~3.0",
+        "symfony/phpunit-bridge": "~2.7"
     },
     "scripts": {
         "post-install-cmd": [
@@ -46,22 +54,20 @@
         ]
     },
     "config": {
+        "bin-dir": "bin",
         "platform": {
-            "php": "5.5.9"
+            "php": "5.6.15"
         }
     },
     "extra": {
         "symfony-app-dir": "app",
-        "symfony-bin-dir": "bin",
-        "symfony-var-dir": "var",
         "symfony-web-dir": "web",
-        "symfony-tests-dir": "tests",
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         },
         "branch-alias": {
-            "dev-master": "3.1-dev"
+            "dev-master": "2.8-dev"
         }
     }
 }
