[dev] Deploy the sonata admin

--- a/app/config/sonata_admin.config.yml
+++ b/app/config/sonata_admin.config.yml
@@ -1,3 +1,9 @@
+sonata_admin:
+    title:      LinkAu Admin
+    templates:
+        # default global templates
+        layout:  SonataAdminBundle::layout.html.twig
+
 sonata_block:
     default_contexts: [cms]
     blocks:
