--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "doctrine/data-fixtures": "1.1.1",
         "friendsofsymfony/oauth-server-bundle": "1.5.2",
         "knplabs/knp-snappy-bundle": "1.4",
-        "symfony/assetic-bundle": "^2.8"
+        "symfony/assetic-bundle": "^2.8",
+        "sonata-project/media-bundle": "2.3.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
