--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,6 +5,7 @@ imports:
     - { resource: sonata/sonata_admin.config.yml }
     - { resource: sonata/sonata_media.config.yml }
     - { resource: ivory/ivory_ckeditor.yml }
+    - { resource: "@TainbCategoryBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
