--- a/src/Tainb/Bundle/BlogBundle/Resources/config/services.yml
+++ b/src/Tainb/Bundle/BlogBundle/Resources/config/services.yml
@@ -2,7 +2,7 @@ services:
 #    tainb_blog.example:
 #        class: Tainb\Bundle\BlogBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
-  admin.category:
+  admin.blog:
       class: Tainb\Bundle\BlogBundle\Admin\BlogAdmin
       arguments: [~, Tainb\Bundle\BlogBundle\Entity\Blog, ~]
       tags:
