[Dev] Fix the logo and title of admin

--- a/app/config/sonata/sonata_admin.config.yml
+++ b/app/config/sonata/sonata_admin.config.yml
@@ -1,5 +1,5 @@
 sonata_admin:
-    title:      LinkAu Admin
+    title:      LienKetUcChau Admin
     templates:
         # default global templates
         layout:  SonataAdminBundle::layout.html.twig
