--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
         "friendsofsymfony/oauth-server-bundle": "1.5.2",
         "knplabs/knp-snappy-bundle": "1.4",
         "symfony/assetic-bundle": "^2.8",
-        "sonata-project/media-bundle": "2.3.3"
+        "sonata-project/media-bundle": "2.3.3",
+        "knplabs/knp-menu-bundle": "~1.1",
+        "leafo/scssphp": "^0.6.5",
+        "patchwork/jsqueeze": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
