[Dev] config front-end bower gulp

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
   ],
   "dependencies": {
     "sonata-project-admin-bundle": "./vendor/sonata-project/admin-bundle/bower.json",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "bootstrap-sass": "bootstrap-sass-official#^3.3.7",
+    "font-awesome": "fontawesome#^4.6.3"
   }
 }
